// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`display help for run tests CLI displays as expected 1`] = `
"Run Functional Tests

Usage:
  node scripts/functional_tests --help
  node scripts/functional_tests [--config <file1> [--config <file2> ...]]
  node scripts/functional_tests [options] [-- --<other args>]

Options:
  --help                         Display this menu and exit. 
  --config <file>                Pass in a config. Can pass in multiple configs. 
  --esFrom <snapshot|source>     Build Elasticsearch from source or run from snapshot. Default: snapshot
  --kibana-install-dir <dir>     Run Kibana from existing install directory instead of from source. 
  --bail                         Stop the test run at the first failure. 
  --grep <pattern>               Pattern to select which tests to run. 
  --updateBaselines              Replace baseline screenshots with whatever is generated from the test. 
  --verbose                      Log everything. 
  --debug                        Run in debug mode. 
  --quiet                        Only log errors. 
  --silent                       Log nothing."
`;

exports[`process options for run tests CLI accepts boolean value for updateBaselines 1`] = `
Object {
  "configs": Array [
    "foo",
  ],
  "createLogger": [Function],
  "extraKbnOpts": undefined,
  "updateBaselines": true,
}
`;

exports[`process options for run tests CLI accepts debug option 1`] = `
Object {
  "configs": Array [
    "foo",
  ],
  "createLogger": [Function],
  "debug": true,
  "extraKbnOpts": undefined,
}
`;

exports[`process options for run tests CLI accepts empty config value if default passed 1`] = `
Object {
  "config": "",
  "configs": Array [
    "foo",
  ],
  "createLogger": [Function],
  "extraKbnOpts": undefined,
}
`;

exports[`process options for run tests CLI accepts extra server options 1`] = `
Object {
  "_": Object {
    "server.foo": "bar",
  },
  "configs": Array [
    "foo",
  ],
  "createLogger": [Function],
  "extraKbnOpts": Object {
    "server.foo": "bar",
  },
}
`;

exports[`process options for run tests CLI accepts quiet option 1`] = `
Object {
  "configs": Array [
    "foo",
  ],
  "createLogger": [Function],
  "extraKbnOpts": undefined,
  "quiet": true,
}
`;

exports[`process options for run tests CLI accepts silent option 1`] = `
Object {
  "configs": Array [
    "foo",
  ],
  "createLogger": [Function],
  "extraKbnOpts": undefined,
  "silent": true,
}
`;

exports[`process options for run tests CLI accepts source value for esFrom 1`] = `
Object {
  "configs": Array [
    "foo",
  ],
  "createLogger": [Function],
  "esFrom": "source",
  "extraKbnOpts": undefined,
}
`;

exports[`process options for run tests CLI accepts string value for kibana-install-dir 1`] = `
Object {
  "configs": Array [
    "foo",
  ],
  "createLogger": [Function],
  "extraKbnOpts": undefined,
  "kibana-install-dir": "foo",
}
`;

exports[`process options for run tests CLI accepts value for grep 1`] = `
Object {
  "configs": Array [
    "foo",
  ],
  "createLogger": [Function],
  "extraKbnOpts": undefined,
  "grep": "management",
}
`;

exports[`process options for run tests CLI accepts verbose option 1`] = `
Object {
  "configs": Array [
    "foo",
  ],
  "createLogger": [Function],
  "extraKbnOpts": undefined,
  "verbose": true,
}
`;
